--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,8 @@
 :root {
-  --color-background-light: hsl(210, 10%, 98%);
+  --color-background-light: hsl(210, 10%, 22%);
   --color-background-dark: hsl(180, 10%, 12%);
+  --color-foreground-primary: hsl(210, 10%, 98%);
+  --color-border: hsla(210, 10%, 98%, 0.5);
 }
 
 * {
@@ -11,6 +13,9 @@ body {
   background-color: var(--color-background-dark);
   width: 100vw;
   height: 100vh;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  color: var(--color-foreground-primary);
 }
 
 .image-container {
@@ -45,9 +50,87 @@ aside {
   position: fixed;
   top: 24px;
   right: 24px;
-  width: 128px;
-  min-height: 100px;
+  width: 256px;
   padding: 24px;
   border-radius: 4px;
   background-color: var(--color-background-light);
+}
+
+@media (orientation: portrait) {
+  aside {
+    bottom: 16px;
+    left: 16px;
+    right: 16px;
+    top: auto;
+    width: auto;
+  }
+}
+
+.color-inputs {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  gap: 16px;
+}
+
+.color-input {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  gap: 4px;
+}
+
+input[type="color"] {
+  width: 100%;
+  height: 32px;
+  appearance: none;
+  -moz-appearance: none;
+  -webkit-appearance: none;
+  background: none;
+  border: 1px solid var(--color-border);
+  cursor: pointer;
+  background-color: var(--color-background-light);
+  border-radius: 2px;
+}
+
+::-webkit-color-swatch-wrapper {
+  padding: 0;
+}
+
+::-webkit-color-swatch {
+  border: 0;
+  border-radius: 0;
+}
+
+::-moz-color-swatch,
+::-moz-focus-inner {
+  border: 0;
+}
+
+::-moz-focus-inner {
+  padding: 0;
+}
+
+button {
+  display: inline-block;
+  padding: 8px 12px;
+  margin-bottom: 0;
+  font-size: inherit;
+  font-weight: inherit;
+  line-height: inherit;
+  background-color: var(--color-background-dark);
+  color: var(--color-foreground-primary);
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: middle;
+  -ms-touch-action: manipulation;
+  touch-action: manipulation;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  background-image: none;
+  border: 1px solid var(--color-border);
+  border-radius: 4px;
 }
