--- a/styles.css
+++ b/styles.css
@@ -20,10 +20,17 @@ body {
 
 .image-container {
   position: relative;
-  aspect-ratio: 1.33333333;
   max-width: 100vw;
   max-height: 100vh;
   margin-inline: auto;
+}
+
+#image-container-haus {
+  aspect-ratio: 1.33333333;
+}
+
+#image-container-hof {
+  aspect-ratio: 1.436;
 }
 
 .image-container img,
