--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,10 @@ body {
   color: var(--color-foreground-primary);
 }
 
+.hidden {
+  display: none;
+}
+
 .image-container {
   position: relative;
   max-width: 100vw;
@@ -42,7 +46,6 @@ body {
 
 .mask {
   mix-blend-mode: overlay;
-  mask-size: cover;
 }
 
 aside {
